5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1638_652.log
== TEST (2019-04-13 17:02:27) 
-- CODE:
n = int(input("numero de tres digitos: "))
nr = n/100

if( n % nt == 0):
	print("SIM")
else:
	print("NAO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( n % nt == 0):
NameError: name 'nt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:02:39) 
-- CODE:
n = int(input("numero de tres digitos: "))
nr = n/100

if( n % nr == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:02:46) 
-- CODE:
n = int(input("numero de tres digitos: "))
nr = n/100

if( n % nr == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:02:55) 
-- CODE:
n = int(input("numero de tres digitos: "))
nr = n/100

if( n % nr == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:05:18) 
-- CODE:
n = int(input("numero de tres digitos: "))
nr = n%100

if( n % nr == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 17:05:28) 
-- CODE:
n = int(input("numero de tres digitos: "))
nr = n%100

if( n % nr == 0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.128466
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
